--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Web site created using create-react-app"/>
 		<link rel="apple-touch-icon" href="src/app-icon.ico" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;1,200&display=swap" rel="stylesheet">
+
 		<title>ReactApp</title>
 	</head>
 	<body>
